--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <!-- Navbar content -->
         <div class="container">
             <a class="navbar-brand">
-                <img src="public/bookshop.png" alt="Logo" style="width: 90px; height: 90px; border-radius: 50px; margin: 15px;">
+                <img src="public/bookshop.png" alt="Logo" style="width: 100px; height: 90px; border-radius: 50px; margin: 15px;">
             </a>
         </div>
     </nav>
@@ -23,6 +23,14 @@
         <div class="cover">
             <img src="public/Narnia.jpg" alt="Capa do Livro" style="width: 100%; height: 100%; border-radius: 10px;">
         </div>
+    </div>
+    <div class="book-info">
+        <button class="button">
+            <div class="button-content">
+                <p>Preço: R$ 80,00</p>
+                <a href="https://www.amazon.com.br/As-Cr%C3%B4nicas-N%C3%A1rnia-Brochura-Lewis/dp/857827069X/ref=sr_1_8?adgrpid=1136895682069568&dib=eyJ2IjoiMSJ9.Ir3vJbAtct0Yehg4jiQl-XTxi4T_T_zS-hdfTAiZHoR_zFcwTdgDzxs3omzYHBWhnhwYIhkNZGbSBa9oB8f_NK9N25R2wQNzuGdLTCmACA2ZR42nvW2GP1Qdno3peuiVywMKm-3ERQnArVVRMpPDS4EQCnlRR8-HHRVgCHIsPJ6iOq_Slv2lULe0aYz8X0ynrJVfGOUrBxrhqzevTGmq2LMZu8DGABkoc-XX1nk0yHwGXi4hpUn5fqYuAKo6smQdDmXbS8S-Uv9vPEapjcl68ANurg2z-XAlFCu9d8ZQ_qhf7OKyKTpNKn17FaizHDmawC6Naz778PBsak8aSFPmUhfF4Q_8olaOS_OVPA6VOgrMyVQv3fL1H7A76vfWhj8MzYNwjLHfUSdRIGCyigW7VN4whPLvc3eocNQDGs9lZrT7sac1BXMv1GQfksBmmxpa.7LUgnkiMnZewUklgDOvw5H9pH7b2hmRxjI0MTvIqFuA&dib_tag=se&hvadid=71056145894129&hvbmt=be&hvdev=c&hvlocphy=147064&hvnetw=o&hvqmt=e&hvtargid=kwd-71056498068881%3Aloc-20&hydadcr=5622_13210448&keywords=narnia+livro&qid=1742508609&sr=8-8" target="_blank">Compre na Amazon</a>
+            </div>
+        </button>
     </div>
 </body>
 </html>
